# Proyecto2Progra2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: TechnicalDocument.md
include/: AdventureEngine.h  SimulationEngine.h
include/Events/: GameEvent.h  RewardEvent.h
include/engine/: AdventureEngine.h  SimulationEngine.h
include/entities/: Character.h  Enemy.h  Player.h
include/events/: GameEvent.h  TrapEvent.h
include/exceptions/: FileException.h  GameException.h  InvalidDataException.h  SimulationException.h
include/items/: Inventory.h  Item.h  Key.h  Potion.h  Treasure.h
include/objectives/: Objective.h
include/utils/: FileManager.h  Logger.h  ReportGenerator.h
include/world/: Room.h  World.h
src/: AdventureEngine.cpp  SimulationEngine.cpp  main.cpp
src/Events/: GameEvent.cpp  RewardEvent.cpp  TrapEvent.cpp
src/engine/: AdventureEngine.cpp  SimulationEngine.cpp
src/entities/: Character.cpp  Enemy.cpp  Player.cpp
src/events/: GameEvent.cpp  RewardEvent.cpp  TrapEvent.cpp
src/exceptions/: FileException.cpp  GameException.cpp  InvalidDataException.cpp  SimulationException.cpp
src/items/: Inventory.cpp  Item.cpp  Key.cpp  Potion.cpp  Treasure.cpp
src/objectives/: Objective.cpp
src/utils/: FileManager.cpp  Logger.cpp  ReportGenerator.cpp
src/world/: Room.cpp  World.cpp
